[package]
name = "test_code"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-vm={verison = "0.9.1",git = "https://github.com/0xPolygonMiden/miden-vm.git",default-features = false}
miden-processor = { version = "0.9.1",git = "https://github.com/0xPolygonMiden/miden-vm.git", default-features = false }